feat: add EEI typed entity search
